[gd_scene load_steps=6 format=2]

[ext_resource path="res://motion_ai/pawn/BasePawn.tscn" type="PackedScene" id=1]
[ext_resource path="res://motion_ai/common/tasking_coward_machine/TaskingCowardMachine.tscn" type="PackedScene" id=2]
[ext_resource path="res://tests/test_assets/TaskingCorwardPawn.gd" type="Script" id=3]
[ext_resource path="res://motion_ai/common/GroupSortMatrix.gd" type="Script" id=4]

[sub_resource type="Resource" id=1]
script = ExtResource( 4 )
threat_groups = PoolStringArray( "packing_threat", "rat_threat" )
goal_groups = PoolStringArray( "packing_goal" )

[node name="TaskingCowardPawn" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="VisualSprite" parent="." index="7"]
animation = "idle_haul_west"
frame = 0

[node name="SensorySortCore" parent="." index="10"]
group_sort_matrix = SubResource( 1 )

[node name="CharacterStatsCore" parent="." index="13"]
base_move_speed = 20.0

[node name="TaskingCowardMachine" parent="." index="14" instance=ExtResource( 2 )]
integrating_body = NodePath("..")
kinematic_core = NodePath("../KinematicCore")
sensory_sort_core = NodePath("../SensorySortCore")
level_interface_core = NodePath("../LevelInterfaceCore")
item_management_core = NodePath("../ItemManagementCore")
character_stats_core = NodePath("../CharacterStatsCore")

[connection signal="task_complete_echo" from="TaskingCowardMachine" to="." method="_on_TaskingCowardMachine_task_complete_echo"]
